ocaml/testsuite/tests/templates/basic/bad_impl_as_param.reference
File "bad_impl_as_param.ml", line 1:
Error: Cannot compile an implementation with -as-parameter.
